[package]
name = "keystroke-store"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kafka = "0.9.0"
rdev = {version="0.5.2", features=["serialize"]}
serde = {version="1.0.160", features=["derive"]}
serde_json = "*"
